--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Yomogi', sans-serif;
-      background-color: #e6f0e6; /* desaturated light grey-green */
+      background-color: #e6f0e6;
       margin: 0;
       padding: 1rem;
     }
@@ -26,7 +26,7 @@
       font-family: Arial, sans-serif;
       border: none;
       border-radius: 8px;
-      background-color: #1e90ff; /* darker blue */
+      background-color: #1e90ff;
       color: white;
       cursor: pointer;
       width: 280px;
@@ -73,7 +73,6 @@
       justify-content: flex-start;
       margin-top: 0px;    
       margin-bottom: 0px; 
-      
     }
     .qr {
       width: 110px;
@@ -93,7 +92,7 @@
     }
     .description {
       font-family: 'Yomogi', sans-serif;
-      font-size: clamp(24px, 5vw, 38px);
+      font-size: 34px; /* default font size */
       font-weight: bold;
       margin-top: 0px;    
       margin-bottom: 0px; 
@@ -101,7 +100,9 @@
       white-space: nowrap;
       letter-spacing: -3px;
     }
-
+    .description.small {
+      font-size: 26px;
+    }
     .name {
       font-family: Arial, sans-serif;
       font-size: 27px;
@@ -173,11 +174,22 @@
 
         const textDiv = document.createElement("div");
         textDiv.className = "text";
-        textDiv.innerHTML = `
-          <div class="description">${description}</div>
-          <div class="name">${itemName}</div>
-          <div class="price">RM ${price}</div>
-        `;
+
+        const descDiv = document.createElement("div");
+        descDiv.className = "description" + (description.length > 18 ? " small" : "");
+        descDiv.textContent = description;
+
+        const nameDiv = document.createElement("div");
+        nameDiv.className = "name";
+        nameDiv.textContent = itemName;
+
+        const priceDiv = document.createElement("div");
+        priceDiv.className = "price";
+        priceDiv.textContent = `RM ${price}`;
+
+        textDiv.appendChild(descDiv);
+        textDiv.appendChild(nameDiv);
+        textDiv.appendChild(priceDiv);
 
         tag.appendChild(qrCanvas);
         tag.appendChild(textDiv);
