--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <label for="fileInput" id="fileLabel">Choose file</label>
     <input type="file" id="fileInput" accept=".xlsx, .xls" />
     <button onclick="downloadPDF()">Download PDF</button>
+    <button onclick="saveToGDrive()">Save to GDrive</button>
   </div>
   <div id="tag-container"></div>
 
@@ -211,6 +212,30 @@
       }
 
       pdf.save("tags.pdf");
+    }
+
+    async function saveToGDrive() {
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF({ unit: "mm", format: [40, 12], orientation: "landscape" });
+      const tags = document.querySelectorAll(".tag");
+
+      for (let i = 0; i < tags.length; i++) {
+        const canvas = await html2canvas(tags[i], { scale: 2 });
+        const imgData = canvas.toDataURL("image/png");
+        if (i > 0) pdf.addPage([40, 12], 'landscape');
+        pdf.addImage(imgData, "PNG", 0, 0, 40, 12);
+        await new Promise(resolve => requestAnimationFrame(resolve));
+      }
+
+      const blob = pdf.output("blob");
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "tags.pdf";
+      a.click();
+      URL.revokeObjectURL(url);
+
+      alert("To save this file to Google Drive, upload it manually via your Google Drive interface or use Google Picker API in an authenticated app.");
     }
   </script>
 </body>
